# IMDbScraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/imdbscraper/: __init__.py  main.py
src/imdbscraper/imdb/: __init__.py  name.py
src/imdbscraper/tests/: __init__.py  test_imdb_name_biography.py  test_name.py
