[tool.poetry]
name = "IMDbScraper"
version = "0.1.1"
description = "A web scraper to extract data from IMDb"
authors = ["Federico García <garciafedericoagustin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
DateTime = "^4.3"
requests = "^2.25.1"
html5lib = "^1.1"
lxml = "^4.6.3"
beautifulsoup4 = "^4.9.3"
pandas = "^1.2.5"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"